--- a/index.html
+++ b/index.html
@@ -6,9 +6,64 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>La Republica</title>
   <link rel="stylesheet" href="assets/css/main.css">
+  <link rel="stylesheet" href="assets/css/font-awesome.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
-<body>
-  
+<body class="temporal">
+  <header>
+    <div class="banner">
+    <div class="logo">
+      <img src="assets/img/logo.png" alt="La Republica">
+      <div class="network-sotial">
+        <ul class="ul-network-sotial">
+          <li class="li-network-sotial"><span><i class="fa fa-twitter fa-stack" aria-hidden="true"></i></span></li>
+          <li class="li-network-sotial"><span><i class="fa fa-facebook fa-stack" aria-hidden="true"></i></span></li>
+          <li class="li-network-sotial"><span><i class="fa fa-youtube-play fa-stack" aria-hidden="true"></i></span></li>
+          <li class="li-network-sotial"><span><i class="fa fa-instagram fa-stack" aria-hidden="true"></i></span></li>
+        </ul>
+      </div>
+    </div>
+    <div class="search">
+      <span>Buscar<i class="fa fa-search fa-rotate-90 fa-stack" aria-hidden="true"></i></span>
+    </div>
+    </div>
+  </header>
+  <section>
+    <div class="menu">
+      <div class="menu-bar">
+        <ul class="ul-menu-bar">
+          <li class="li-menu-bar"><a href="#">POLÍTICA</a></li>
+          <li class="li-menu-bar"><a href="#">ECONOMÍA</a></li>
+          <li class="li-menu-bar"><a href="#">SOCIEDAD</a></li>
+          <li class="li-menu-bar"><a href="#">MUNDO</a></li>
+          <li class="li-menu-bar"><a href="#">DEPORTES</a></li>
+          <li class="li-menu-bar"><a href="#">ESPECTÁCULOS</a></li>
+          <li class="li-menu-bar"><a href="#">ED. IMPRESA</a></li>
+          <li class="li-menu-bar"><a href="#">INVESTIGACIÓN</a></li>
+          <li class="li-menu-bar"><a href="#">MAS<i class="fa fa-chevron-down"></i></a></li>
+        </ul>
+      </div>
+    </div>
+  </section>
+  <section>
+    <div class="content">
+      <div class="content-main">
+        <div class="content-main-left">
+          <article class="article-a">
+            <h1>Los colaboradores eficaces han documentado su relato en caso Lava Jato</h1>
+            <i class="sprite sprite-odebrecht"></i>
+          </article>
+          <article class="article-b">
+          </article>
+          <article class="article-c">
+          </article>
+        </div>
+        <div class="content-main-right">
+
+        </div>
+      </div>
+    </div>
+  </section>
   <script src="assets/js/main.js" charset="utf-8"></script>
 </body>
 </html>
